Added clock divider mode

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,4 +17,6 @@ board = teensylc
 framework = arduino
 lib_ldf_mode = chain+
 lib_deps = thomasfredericks/Bounce2
+    SPI
     https://github.com/pigatron-industries/arduino_eurorack.git
+build_flags = -I./src
