Use template class   for push button

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,14 +9,14 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = teensylc
+default_envs = xen_algorythm
 
-[env:teensylc]
+[env:xen_algorythm]
 platform = teensy
 board = teensylc
 framework = arduino
 lib_ldf_mode = chain+
-lib_deps = thomasfredericks/Bounce2
+lib_deps =
     SPI
     https://github.com/pigatron-industries/arduino_eurorack.git
 build_flags = -I./src
