--- a/platformio.ini
+++ b/platformio.ini
@@ -8,10 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[platformio]
-default_envs = xen_algorythm
+[env]
+extra_scripts = pre:include-apps.py
 
-[env:xen_algorythm]
+[env:xen_algorythm_mkii]
 platform = teensy
 board = teensylc
 framework = arduino
@@ -20,3 +20,19 @@ lib_deps =
     SPI
     https://github.com/pigatron-industries/arduino_eurorack.git
 build_flags = -I./src
+    -DOCTASOURCE_MKII=1
+    -DAPP/ClockDivider
+    -DAPP/EuclideanLogic
+
+[env:xen_algorythm_mki]
+platform = teensy
+board = teensylc
+framework = arduino
+lib_ldf_mode = chain+
+lib_deps =
+    SPI
+    https://github.com/pigatron-industries/arduino_eurorack.git
+build_flags = -I./src
+    -DOCTASOURCE_MKI=1
+    -DAPP/ClockDivider
+    -DAPP/EuclideanLogic
