support mark 2 hardware

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,7 @@
 [env]
 extra_scripts = pre:include-apps.py
 
-[env:xen_algorythm_mkii]
+[env:xen_algorythm_mkii_nocv]
 platform = teensy
 board = teensylc
 framework = arduino
@@ -19,10 +19,10 @@ lib_ldf_mode = chain+
 lib_deps =
     SPI
     https://github.com/pigatron-industries/arduino_eurorack.git
+    sumotoy/gpio_MCP23S17@^0.9
 build_flags = -I./src
-    -DOCTASOURCE_MKII=1
+    -DALGORHYTHM_MKII=1
     -DAPP/ClockDivider
-    -DAPP/EuclideanLogic
 
 [env:xen_algorythm_mki]
 platform = teensy
@@ -33,6 +33,6 @@ lib_deps =
     SPI
     https://github.com/pigatron-industries/arduino_eurorack.git
 build_flags = -I./src
-    -DOCTASOURCE_MKI=1
+    -DALGORHYTHM_MKI=1
     -DAPP/ClockDivider
     -DAPP/EuclideanLogic
