--- a/platformio.ini
+++ b/platformio.ini
@@ -23,6 +23,7 @@ lib_deps =
 build_flags = -I./src
     -DALGORHYTHM_MKII=1
     -DAPP/ClockDivider
+    -DAPP/Decoder
 
 [env:xen_algorythm_mki]
 platform = teensy
